added test spec for employee model and fixed duplicating view

--- a/test/phantom.html
+++ b/test/phantom.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <div id="mocha"></div>
-    <script data-main="phantom-spec-runner.js" src="bower_components/requirejs/require.js"></script>
+    <script data-main="phantom-spec-runner.js" src="../app/bower_components/requirejs/require.js"></script>
 </body>
 </html>
