--- a/app/index.html
+++ b/app/index.html
@@ -14,10 +14,10 @@
   <meta name="viewport" content="width=device-width">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <!-- build:css(.tmp) styles/main.css -->
-  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="/styles/main.css">
   <!-- endbuild -->
   <!-- build:js scripts/vendor/modernizr.js -->
-  <script src="bower_components/modernizr/modernizr.js"></script>
+  <script src="/bower_components/modernizr/modernizr.js"></script>
   <!-- endbuild -->
 </head>
 
@@ -45,7 +45,7 @@
   </script>
 
   <!-- build:js scripts/main.js -->
-  <script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
+  <script data-main="/scripts/main" src="/bower_components/requirejs/require.js"></script>
   <!-- endbuild -->
 </body>
 
